force-app/main/default/objects/ssot__DiagnosticSummaryIdentifier__dlm/fields/ssot__DiagnosticSummaryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DiagnosticSummaryId__c</fullName>
    <label>Diagnostic Summary</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DiagnosticSummaryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>