force-app/main/default/objects/ssot__DiagnosticSummaryIdentifier__dlm/fields/ssot__rel_1716726056903_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726056903_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DiagnosticSummaryIdentifier_Identifi_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>DiagnosticSummaryIdentifier_Identifi_rel</relationshipLabel>
    <relationshipName>rel_1716726056903_end</relationshipName>
    <type>Lookup</type>
</CustomField>