force-app/main/default/objects/ssot__DiagnosticSummaryIdentifier__dlm/fields/ssot__rel_1716726062494_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726062494_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DiagnosticSummaryIdentifier_IssuingA_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>DiagnosticSummaryIdentifier_IssuingA_rel</relationshipLabel>
    <relationshipName>rel_1716726062494_end</relationshipName>
    <type>Lookup</type>
</CustomField>